<resources>
    <string name="app_name">My Contact App</string>
    <string name="name_title">Name</string>
    <string name="prefix_title">Prefix</string>
    <string name="first_name_title">First Name</string>
    <string name="mid_name_title">Middle Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="suffix_title">Suffix / Academic Title</string>
    <string name="nickname_title">Nickname</string>
    <string name="contact_title">Contact</string>
    <string name="email_title">Email</string>
    <string name="phone_title">Phone</string>
    <string name="mobile_title">Mobile</string>
    <string name="address_title">Address</string>
    <string name="street_title">Street</string>
    <string name="street_2_title">Street 2</string>
    <string name="city_title">City</string>
    <string name="province_title">State / Province</string>
    <string name="country_title">Country</string>
    <string name="postal_title">Zip / Postal</string>
    <string name="personal_title">Personal</string>
    <string name="birthday_title">Birthday</string>
    <string name="job_title">Job Title</string>
    <string name="department_title">Department</string>
    <string name="company_title">Company</string>
    <string name="website_title">Website</string>
    <string name="note_title">Note</string>
    <string name="edit_contact">Edit</string>
    <string name="delete_contact">Delete</string>
    <string name="update_contact">Update</string>
    <string name="yes">Absolutely</string>
    <string name="no">Hell no !</string>
    <string name="new_contact_menu">New contact</string>
    <string name="search_contact_menu">Search</string>
    <string name="save_contact">Save</string>
    <string name="cancel_contact">Cancel</string>
    <string name="error_required">required, just fill it</string>
    <string name="error_alphabet">error, input must be letters</string>
</resources>